Add integ test